k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: products-app
  labels:
    app.kubernetes.io/managed-by: kustomize
