k8s/base/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: products-app
  labels:
    app: postgres
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  type: ClusterIP
